--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+Mon Feb  2 00:30:19 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkimagecache.c: set cache size to 0, this frees
+	pixmaps as soon as they are unused.
+
+	* beast-gtk/gxk/gxkscrollcanvas.c: fixed list removal bug that
+	caused crashes on skin updates.
+
+	* library/skins/blueimpress.skin:
+	* library/skins/brownforms.skin:
+	* library/skins/silvervein.skin:
+	* library/skins/images/blueimpress.jpg:
+	* library/skins/images/brownforms.jpg:
+	* library/skins/images/silvervein.png: added new skins.
+
 Sun Feb  1 18:38:15 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstapp.[hc]: provide action list for available skins.
