--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Feb  2 02:06:49 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstrecords.idl: fixed typo.
+
+	* biogreen.skin:
+	* images/biogreen.jpg: added skin.
+
 Mon Feb  2 00:30:19 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxkimagecache.c: set cache size to 0, this frees
