--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Feb  2 16:17:46 2004  Tim Janik  <timj@gtk.org>
+
+	* configure.in: version update to 0.5.7rc1, binary 0, interface 0.
+
 Mon Feb  2 02:06:49 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstrecords.idl: fixed typo.
