--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,13 @@
+Tue Feb  3 23:29:30 2004  Tim Janik  <timj@gtk.org>
+
+	* bsemain.c (bse_init_core): minor improvement in passing gettimeofday
+	entrophy into srand().
+
+	* bseprocedure.[hc]: implemented procedure class caching, which keeps
+	procedure classes alive for ca. 500ms after their last call. this gets
+	rid of a lot of unnecessary class (and paramspec) creations and
+	destructions.
+	
 Sat Jan 31 23:37:22 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bseprocedure.c (call_proc): Fixed bug in validation: instead of
