--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
 * Moved RC file from ~/.beastrc to ~/.beast/beastrc
+* Added Croatian translation [Robert Sedak]
+* Added French translation [Christophe Merlet]
+* Added Albanian translation [Laurent Dhima]
+* Added Mongolian translation [Dulmandakh Sukhbaatar]
         
 Overview of Changes in BEAST/BSE 0.5.6:
 
