--- a/docs/site-development.texi
+++ b/docs/site-development.texi
@@ -30,6 +30,7 @@ translations can be obtained from the following pages.
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/el/extras/index.html,, el},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/es/extras/index.html,, es},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/fr/extras/index.html,, fr},
+@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/hr/extras/index.html,, hr},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/mn/extras/index.html,, mn},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/nl/extras/index.html,, nl},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/pt/extras/index.html,, pt},
