improved About section.
Sun Feb  8 05:53:14 2004  Tim Janik  <timj@gtk.org>

        * docs/site-about.texi: improved About section.

        * docs/site-news.texi: provide feedback link.

svn path=/trunk/; revision=1961

--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -17,6 +17,8 @@
 @tab	#beast on @uref{http://beast.gtk.org/wiki.php?id=GimpNet,,GimpNet}
 @item Email:
 @tab	@uref{http://mail.gnome.org/mailman/listinfo/beast/,, Mailing List} and @uref{http://mail.gnome.org/archives/beast/,, Archive}
+@item Feedback:
+@tab	Wiki @uref{http://beast.gtk.org/wiki.php?id=Discussion,,Discussion} page
 @end multitable
 
 
