--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Feb  8 05:53:14 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/site-about.texi: improved About section.
+
+	* docs/site-news.texi: provide feedback link.
+
 Sun Feb  8 03:27:44 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: increased version to 0.6.0-rc1, binary 0, interface 0.
