--- a/docs/site-about.texi
+++ b/docs/site-about.texi
@@ -10,25 +10,41 @@
 
 @unnumbered What are @beast{} and @bse{}?
 
-@beast (the Bedevilled Audio System) is a GTK+/GNOME based front-end to @bse
-(the Bedevilled Sound Engine).
-@bse is a shared library that comes with the necessary framework to simulate
-audio synthesis (modular synthesis) in realtime and allow for song composition.
-@beast and @bse are provided under the terms of the
-@uref{http://www.gnu.org/copyleft/gpl.html,, GNU General Public License}.
+Beast is a powerful music composition and modular synthesis application released as free software
+under the
+@uref{http://www.gnu.org/copyleft/gpl.html,, GNU GPL}
+and
+@uref{http://www.gnu.org/copyleft/lesser.html,, GNU LGPL}, that runs under unix.
+It supports a wide range of standards in the field, such as MIDI,
+@uref{beast-doc://links-related,,  WAV/AIFF/MP3/OggVorbis/etc}
+audio files and
+@uref{http://www.ladspa.org/,, LADSPA}
+modules.
+It has excellent technical abilities like multitrack editing, unlimited
+undo/redo support, real-time synthesis support, 32bit audio rendering,
+full duplex support, multiprocessor support, precise timing down to sample
+granularity, on demand loading of partial wave files, on the fly decoding
+and full scriptability in scheme.
+The plugins, synthesis core and the user interface are actively being developed
+and translated into a variety of languages, regularly assimilating user feedback
+such as from our
+@uref{http://beast.gtk.org/wiki.php?id=FeatureRequests,,FeatureRequests} page.
 
-@beast is currently in development stage, the @bse API has not fully stabelized yet.
-The rough goal of this project is to get an audio system that supports multiple
-song and sample formats (besides the newly introduced @code{.bse} format) as well
-as synthesis networks and allows full fledged editing and manipulation of them.
-Sample manipulation includes generation of new sounds from module networks,
-based on various forms of audio synthesis.
+Here is an extensive
+@uref{beast-doc://screenshots/index,, screenshots}
+page, showing beast in action.
 
-You may want to check out the @uref{beast-doc://screenshots/index,, screenshots} page to get an
-idea of how it looks like.
+@beast is an abbreviation for @emph{Bedevilled Audio System}. @bse an abbreviation for
+@emph{Bedevilled Sound Engine}, it implements all the neccessary music processing logic
+required by @beast in a seperate reusable library. The ``Bedevilled'' portion of
+the names has no religious background, but merely refers to the complexity involved
+implementing such a ``BEAST'' (pun intended ;).
 
-For a summary from a conversation with the developer, see this
-@uref{http://beast.gtk.org/mirror/gnome-news/946276088.html,, article (mirrored from http://news.gnome.org/gnome-news/946276088/index_html)}
-on @uref{http://news.gnome.org/gnome-news,, Gnotices}.
+For discussions/feedback relating to @beast or this page, refer to our
+@uref{http://beast.gtk.org/wiki.php?id=Discussion,,Discussion} page.
+
+For a collection of articles relating to @beast and past news about the project,
+refer to our
+@uref{beast-doc://historic,,historic section}.
 
 @bye
