--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Wed Feb 11 02:04:29 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstdragutils.[hc]: 
+	* beast-gtk/bstmarker.[hc]: removed these files, logic provided by
+	GxkScrollCanvas now. adapted namespace in callers.
+
+	* beast-gtk/bstsnetrouter.c: provide Authors and License information
+	about modules in palette view.
+
+	* beast-gtk/bstdraggroup.c:
+	* beast-gtk/bstdragpattern.c: removed, code is unused for a long time.
+
 Tue Feb 10 10:22:00 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bsteventroll.c: confine selection rectangle to 16bit
