--- a/README
+++ b/README
@@ -2,18 +2,13 @@ General Information
 ===================
 
 This is a development version of BEAST/BSE, the BEdevilled Audio SysTem
-and the Bedevilled Sound Engine, the BSE API is not considered to be stable.
-The overall goal of this project is to become an audio system that supports
-multiple song and sample formats (besides the project specific .bse format)
-as well as synthesis networks and allows full fledged editing and
-manipulation of those. Sample manipulation includes generation of new
-sounds from module networks, based on various kinds of audio synthesis.
-More information on the fundamental principles can be found in the
-docs/ subdirectory and on the beast website.
-Some *.bse files used for testing are also included in the test/
-subdirectory.
+and the Bedevilled Sound Engine. BEAST is a powerful music composition
+and modular synthesis application released as free software under the
+GNU GPL and GNU LGPL, that runs under unix.
+More information about the project can be found at the website and
+in the documents and manuals shipped with release tarballs.
 
-To get a basic start, you'll also need Gtk+-2.2, a recent version
+In order to build release tarballs, you need Gtk+-2.2, a recent version
 of the Gtk+-2.2 based GnomeCanvas, Guile-1.6 and the Ogg/Vorbis
 Codec libraries.
 Though optional, it is a good idea to also have libmad (MPEG audio
@@ -38,8 +33,11 @@ The official ftp site for BEAST/BSE is:
 The official web site for BEAST/BSE is:
   http://beast.gtk.org/
 
-And there is a mailing list as well (beast@gnome.org):
+There also is a mailing list for the project (beast@gnome.org):
   http://mail.gnome.org/mailman/listinfo/beast/
+
+And a related IRC channel:
+  #beast on GimpNet (irc.gimp.org:6666)
 
 BEAST also supports the LADSPA plugin API, so various kinds of third
 party plugins can be loaded and executed by BEAST. LADSPA plugins are
