--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
+Wed Feb 11 09:14:44 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstsplash.c (splash_select_string): improved rand()
+	distribution of string selection algorithm to reduce probability
+	for sequential dups to (1/n)^2.
+
 Wed Feb 11 02:36:30 2004  Tim Janik  <timj@gtk.org>
 
-	* docs/bse-plugin-generator.1.texi: removed, tehres sfidl.1 now.
+	* docs/bse-plugin-generator.1.texi: removed, there's sfidl.1 now.
 
 	* docs/*.1.texi: updated links to point to sfidl.1.
 
